--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/12Monkeys"/>
+	<classpathentry kind="lib" path="D:/librairies/jdeli-trial.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
